[gd_scene load_steps=14 format=3 uid="uid://cnf5vk7850cta"]

[ext_resource type="Texture2D" uid="uid://cp8kb72qytph6" path="res://assets/image/dices.png" id="1_cdv6b"]
[ext_resource type="Script" path="res://Dice.gd" id="2_6o8rj"]
[ext_resource type="AudioStream" uid="uid://j65gae0mhg61" path="res://assets/sound/dice4.wav" id="3_8cq2w"]
[ext_resource type="AudioStream" uid="uid://imrymay3l8cv" path="res://assets/sound/dice3.wav" id="4_gh8k5"]
[ext_resource type="AudioStream" uid="uid://4tl04c7ue0we" path="res://assets/sound/dice1.wav" id="5_jpex5"]
[ext_resource type="AudioStream" uid="uid://b87jov530ft3e" path="res://assets/sound/dice2.wav" id="6_1th6s"]
[ext_resource type="Texture2D" uid="uid://bnoiarhtmhco6" path="res://assets/image/arrow.png" id="7_vvcj8"]
[ext_resource type="Texture2D" uid="uid://cvimqgjpad2c0" path="res://assets/image/pig.png" id="8_hrk36"]
[ext_resource type="Texture2D" uid="uid://du1sq0r2me7s2" path="res://Godot/Alien/blue__0035_fire_1.png" id="9_i2sf4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_23tvq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82rxa"]
bg_color = Color(0.921569, 0.921569, 0.921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_metk8"]
bg_color = Color(0.847059, 0.878431, 0.956863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eisji"]
bg_color = Color(0.898039, 0.894118, 0.937255, 1)

[node name="Dice" type="Sprite2D"]
position = Vector2(589, 494)
scale = Vector2(2, 2)
texture = ExtResource("1_cdv6b")
hframes = 3
vframes = 2
script = ExtResource("2_6o8rj")

[node name="DiceMusic4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8cq2w")

[node name="DiceMusic3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gh8k5")

[node name="DiceMusic1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jpex5")

[node name="DiceMusic2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1th6s")

[node name="DiceButton" type="Button" parent="."]
modulate = Color(0.937255, 0.854902, 0.941176, 1)
self_modulate = Color(0.988235, 0.945098, 0.976471, 1)
material = SubResource("CanvasItemMaterial_23tvq")
offset_left = -54.5
offset_top = -69.5
offset_right = 54.5
offset_bottom = -38.5
tooltip_text = "Press this button to roll the dice."
theme_override_colors/font_color = Color(0.188235, 0.141176, 0.607843, 1)
theme_override_colors/font_pressed_color = Color(0.196078, 0.137255, 0.580392, 1)
theme_override_colors/font_hover_color = Color(0.192157, 0.141176, 0.521569, 1)
theme_override_colors/font_focus_color = Color(0.160784, 0.12549, 0.517647, 1)
theme_override_colors/icon_normal_color = Color(0.858824, 0.858824, 0.858824, 1)
theme_override_colors/icon_pressed_color = Color(0.843137, 0.843137, 0.843137, 1)
theme_override_colors/icon_hover_color = Color(0.682353, 0.290196, 0.54902, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_82rxa")
theme_override_styles/hover = SubResource("StyleBoxFlat_metk8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eisji")
text = "Roll the Dice!"
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="rightArrow" type="TextureButton" parent="."]
modulate = Color(0.392157, 0.447059, 0.886275, 1)
offset_left = 59.5
offset_top = -30.5
offset_right = 159.5
offset_bottom = 69.5
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_vvcj8")

[node name="leftArrow" type="TextureButton" parent="."]
modulate = Color(0.811765, 0.552941, 0.670588, 1)
offset_left = -71.5
offset_top = 19.0
offset_right = 28.5
offset_bottom = 119.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_vvcj8")

[node name="leftScoreLabel" type="Label" parent="."]
modulate = Color(0.698039, 0.529412, 0.662745, 1)
offset_left = -188.5
offset_top = 23.5
offset_right = -133.5
offset_bottom = 67.5
tooltip_text = "Left Player's Score"
mouse_filter = 0
theme_override_colors/font_color = Color(0.862745, 0.737255, 0.847059, 1)
text = "Points"

[node name="rightScoreLabel" type="Label" parent="."]
modulate = Color(0.721569, 0.788235, 0.972549, 1)
offset_left = 128.5
offset_top = 24.5
offset_right = 183.5
offset_bottom = 68.5
theme_override_colors/font_color = Color(0.494118, 0.603922, 0.972549, 1)
text = "Points"

[node name="leftPlayer" type="TextureRect" parent="."]
offset_left = -230.0
offset_top = -189.5
offset_right = -41.0
offset_bottom = -31.5
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_hrk36")

[node name="rightPlayer" type="TextureRect" parent="."]
offset_left = 93.5
offset_top = -224.0
offset_right = 322.5
offset_bottom = 204.0
scale = Vector2(0.45, 0.45)
texture = ExtResource("9_i2sf4")

[node name="roundLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -103.0
offset_right = 40.0
offset_bottom = -78.0
theme_override_colors/font_color = Color(0.701961, 0.776471, 0.0862745, 1)
text = "Round #"
horizontal_alignment = 1

[node name="leftScore" type="Label" parent="."]
offset_left = -178.0
offset_top = -21.0
offset_right = -134.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.745098, 0.572549, 0.635294, 1)
theme_override_font_sizes/font_size = 26
text = "0"

[node name="rightScore" type="Label" parent="."]
offset_left = 132.0
offset_top = -21.0
offset_right = 176.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.439216, 0.509804, 0.964706, 1)
theme_override_font_sizes/font_size = 26
text = "0"

[connection signal="pressed" from="DiceButton" to="." method="_on_dice_button_pressed"]
